--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -73,7 +73,7 @@ body {
         width: 334px;
         margin: 0 auto;
         @media only screen and (max-width: 576px) {
-          width: auto;
+          width: 272px;
         }
         .confirm-modal__applicant--flex {
           display: flex;
